fix(frontend): fixing z-index hierarchy of modal

--- a/frontend/src/components/forms/ProductModal.css
+++ b/frontend/src/components/forms/ProductModal.css
@@ -10,7 +10,7 @@
 
     width: 50rem;
 
-    z-index: 2;
+    z-index: 10;
 }
 
 .modal-overlay .modal {
